--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -44,6 +44,7 @@
 @very-dark-brown: #010000;
 @black: #000000;
 @black-3: rgba(0, 0, 0, 0.3);
+@mischka: #d6d9e6;
 
 @mobile-width: 320;
 @tablet-width: 768;
