--- a/source/blocks/companion/companion.less
+++ b/source/blocks/companion/companion.less
@@ -13,7 +13,6 @@
 }
 
 .companion__photo {
-
   @media @only-mobile {
     border-radius: 50%;
   }
@@ -25,6 +24,8 @@
   @media @from-desktop {
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
+    margin-left: -25px;
+    margin-top: -25px;
   }
 }
 
