--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -58,3 +58,5 @@
 @from-tablet: ~"screen and (min-width: @{tablet-width}px)";
 @to-desktop: ~"screen and (max-width: @{tablet-max-width}px)";
 @from-desktop: ~"screen and (min-width: @{desktop-width}px)";
+
+@from-tablet-2x: ~"@{from-tablet} and (min-resolution:144dpi)";
