--- a/source/less/components/direction/direction.less
+++ b/source/less/components/direction/direction.less
@@ -36,6 +36,9 @@
 
 .direction__text-wrap {
   padding: 25px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
 
   @media @only-mobile {
     background-color: @white;
@@ -44,6 +47,7 @@
 
   @media @from-tablet {
     padding: 30px;
+
   }
 }
 
