Флаги в направлениях на главной

--- a/source/less/components/direction/direction.less
+++ b/source/less/components/direction/direction.less
@@ -16,6 +16,22 @@
   }
 }
 
+.direction__flag {
+  width: 35px;
+  height: 24px;
+  position: absolute;
+  top: -12px;
+  left: 25px;
+
+  @media @from-tablet {
+    width: 70px;
+    height: 47px;
+    left: unset;
+    right: -35px;
+    top: 16px;
+  }
+}
+
 .direction__cover {
   width: 100%;
   display: block;
@@ -39,6 +55,7 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
+  position: relative;
 
   @media @only-mobile {
     background-color: @white;
@@ -47,7 +64,7 @@
 
   @media @from-tablet {
     padding: 30px;
-
+    width: 100%;
   }
 }
 
