--- a/source/less/style.less
+++ b/source/less/style.less
@@ -44,6 +44,8 @@
 @import "components/my-profile/my-profile.less";
 @import "components/new-schedule/new-schedule.less";
 @import "components/step/step.less";
+@import "components/verbal-schedule/verbal-schedule.less";
+@import "components/verbal-step/verbal-step.less";
 //
 @import "components/filter-companions/filter-companions.less";
 @import "components/companions-list/companions-list.less";
