--- a/source/blocks/date-picker/date-picker.less
+++ b/source/blocks/date-picker/date-picker.less
@@ -103,7 +103,7 @@
   background-color: @pale-grey;
   color: @greyish-brown;
   text-align: center;
-  border: 1px solid @ghost;
+  border: 1px solid @cloudy-blue;
   padding: 0;
   font-size: 14px;
   line-height: 1.29;
