--- a/source/blocks/level/level.less
+++ b/source/blocks/level/level.less
@@ -77,7 +77,7 @@
     top: 40px;
     left: -3px;
     width: 49px;
-    border-top: 2px solid @ghost;
+    border-top: 2px solid @cloudy-blue;
     text-align: center;
     padding-top: 3px;
   }
