--- a/source/less/components/my-profile/my-profile.less
+++ b/source/less/components/my-profile/my-profile.less
@@ -7,7 +7,7 @@
 .my-profile__tags {
   padding: 25px;
   border-radius: 10px;
-  border: 1px solid @ghost;
+  border: 1px solid @cloudy-blue;
   list-style: none;
   margin: 0 0 25px;
   width: 100%;
@@ -19,7 +19,7 @@
   padding: 0;
   margin: 0;
   border-radius: 10px;
-  border: 1px solid @ghost;
+  border: 1px solid @cloudy-blue;
   list-style: none;
   min-height: 60px;
   @media @only-mobile {
