--- a/source/less/components/new-schedule/new-schedule.less
+++ b/source/less/components/new-schedule/new-schedule.less
@@ -89,7 +89,7 @@
 .new-schedule__duration {
   width: 100%;
   border-radius: 4px;
-  border: 1px solid @ghost;
+  border: 1px solid @cloudy-blue;
   padding: 20px;
   box-sizing: border-box;
   font-size: 20px;
