--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -35,7 +35,7 @@
 @white-two: #f2f2f2;
 @pale-grey: #edeff6;
 @pale-grey-dark: #e2e5f2;
-@ghost: #cbced9;
+@cloudy-blue: #cbced9;
 @snuff: #dfe3f0;
 @periwinkle-grey: #d4d9eb;
 @rolling-stone: #808285;
