--- a/source/less/components/verbal-step/verbal-step.less
+++ b/source/less/components/verbal-step/verbal-step.less
@@ -30,7 +30,7 @@
     width: 15px;
     border: 2px solid @dark-slate-blue;
     border-right: 0;
-    top: 32px;
+    top: 11px;
     left: -15px;
 
     @media @only-tablet {
@@ -53,6 +53,7 @@
   line-height: 1;
   color: @dark-slate-blue;
   position: relative;
+  margin: 0;
   margin-right: auto;
 
   @media @from-tablet {
@@ -62,7 +63,7 @@
   }
 
   @media @from-desktop {
-    
+
   }
 }
 
@@ -88,6 +89,9 @@
   resize: none;
   border-radius: 4px;
   border: 1px solid @cloudy-blue;
+  box-sizing: border-box;
+  margin-top: 14px;
+  margin-bottom: 21.5px;
 
   @media @from-tablet {
     height: 142px;
