--- a/source/less/style.less
+++ b/source/less/style.less
@@ -47,6 +47,7 @@
 @import "components/verbal-schedule/verbal-schedule.less";
 @import "components/verbal-step/verbal-step.less";
 //
+@import "components/filter-countries/filter-countries.less";
 @import "components/filter-companions/filter-companions.less";
 @import "components/companions-list/companions-list.less";
 @import "components/companions/companions.less";
