Максимальная ширина макета

--- a/source/less/prepend.less
+++ b/source/less/prepend.less
@@ -1,6 +1,11 @@
 body {
   font-family: "BloggerSans", "Arial", "Helvetica", sans-serif;
   background-color: @pale-grey;
+
+  @media @from-desktop {
+    width: 1440px;
+    margin: 0 auto;
+  }
 }
  /* stylelint-disable */
 .visually-hidden {
