--- a/source/blocks/featured-companion/featured-companion.less
+++ b/source/blocks/featured-companion/featured-companion.less
@@ -40,8 +40,8 @@
   position: relative;
 }
 
-.companion__name--offline::before,
-.companion__name--online::before {
+.featured-companion .companion__name--offline::before,
+.featured-companion .companion__name--online::before {
   content: "";
   display: block;
   position: absolute;
