--- a/source/blocks/companion/companion.less
+++ b/source/blocks/companion/companion.less
@@ -15,13 +15,19 @@
 .companion__photo {
   @media @only-mobile {
     border-radius: 50%;
+    width: 70px;
+    height: 70px;
   }
 
   @media @only-tablet {
     border-radius: 10px;
+    width: 190px;
+    height: 190px;
   }
 
   @media @from-desktop {
+    width: 285px;
+    height: 285px;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
     margin-left: -25px;
@@ -38,6 +44,9 @@
 
   @media @only-mobile {
     width: calc(100% - 86px);
+    display: flex;
+    flex-flow: column wrap;
+    width: calc(100% - 70px);
   }
 }
 
@@ -46,12 +55,16 @@
   content: "";
   display: block;
   position: absolute;
-  width: 7px;
-  height: 7px;
+  width: 6px;
+  height: 6px;
   border-radius: 50%;
-  left: -20px;
+  //left: -20px;
   top: 50%;
   transform: translateY(-4px);
+
+  @media @only-mobile {
+    right: 0;
+  }
 }
 
 .companion__name--offline::before {
@@ -60,6 +73,28 @@
 
 .companion__name--online::before {
   background-color: @green-apple;
+}
+
+.companion__like {
+  width: 31px;
+  height: 31px;
+  border-radius: 50%;
+  border: 0;
+  background-color: @pale-grey;
+  background-image: url("../img/sprite.svg#heart-dark-blue-grey");
+  background-size: 13px 11px;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  @media @only-tablet {
+    width: 50px;
+    height: 50px;
+    background-size: 20px 17px;
+  }
+}
+
+.companion__like--avtive {
+  background-image: url("../img/sprite.svg#heart-active-tomato");
 }
 
 .companion__tags {
