--- a/source/less/style.less
+++ b/source/less/style.less
@@ -53,3 +53,4 @@
 @import "components/companions/companions.less";
 @import "components/filtered-companions/filtered-companions.less";
 @import "components/visit-wishes/visit-wishes.less";
+@import "components/column-break/column-break.less";
