--- a/source/blocks/companion/companion.less
+++ b/source/blocks/companion/companion.less
@@ -153,8 +153,14 @@
   }
 }
 
-.companion__transport-list {
+.companion__transport {
   @media @only-mobile {
     width: calc(100% - 45px);
+  }
+}
+
+.companion__level {
+  @media @only-mobile {
+    width: 45px;
   }
 }
