--- a/source/less/style.less
+++ b/source/less/style.less
@@ -54,3 +54,4 @@
 @import "components/filtered-companions/filtered-companions.less";
 @import "components/visit-wishes/visit-wishes.less";
 @import "components/column-break/column-break.less";
+@import "components/controls/controls.less";
