--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -10,6 +10,7 @@
 @mango: #ffa530;
 @mango-two: #ff8d30;
 @mango-three: #ffbd30;
+@macaroni-and-cheese: #f3c72b;
 @medium-pink: #ed5565;
 @salmon: #f97676;
 @vivid-orange: #ff5c23;
@@ -34,6 +35,7 @@
 @white-3: rgba(255, 255, 255, 0.3);
 @white-two: #f2f2f2;
 @pale-grey: #edeff6;
+@pale-grey-85: rgba(237, 239, 246, 0.85);
 @pale-grey-dark: #e2e5f2;
 @cloudy-blue: #cbced9;
 @snuff: #dfe3f0;
