--- a/source/less/components/filter-companions/filter-companions.less
+++ b/source/less/components/filter-companions/filter-companions.less
@@ -6,6 +6,33 @@
   padding: 22px 25px;
 }
 
+.filter-companions__section {
+  @media @to-desktop {
+    border-top: 1px solid @macaroni-and-cheese; 
+  }  
+}
+
 .filter-companions__heading {
   margin: 0;
+}
+
+.filter-companions__subheading {
+  display: block;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 1.13;
+  color: @dark-slate-blue;
+
+  @media @only-tablet {
+    &::after {
+      content: ":";
+    }  
+  }
+
+  @media @from-tablet {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.5;  
+  }
 }
