--- a/source/less/components/filter-companions/filter-companions.less
+++ b/source/less/components/filter-companions/filter-companions.less
@@ -16,6 +16,20 @@
   margin: 0;
 }
 
+.filter-companions__subheading::before {
+  content: "";
+  width: 0;
+  display: block;
+  border-top: 4px solid @dark-blue-grey;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+}
+
+.filter-companions__fake-button:checked + .filter-companions__subheading::before {
+  border-top: 0;
+  border-bottom: 4px solid @dark-blue-grey;
+}
+
 .filter-companions__subheading {
   display: block;
   text-transform: uppercase;
