--- a/source/less/components/step/step.less
+++ b/source/less/components/step/step.less
@@ -5,6 +5,11 @@
   padding: 25px;
 }
 
+.step__form {
+  display: flex;
+  flex-flow: row wrap;
+}
+
 .step__heading {
   margin: 0;
   color: @dark-slate-blue;
