--- a/source/less/style.less
+++ b/source/less/style.less
@@ -49,6 +49,7 @@
 //
 @import "components/filter-countries/filter-countries.less";
 @import "components/filter-companions/filter-companions.less";
+@import "components/filter-by-level/filter-by-level.less";
 @import "components/companions-list/companions-list.less";
 @import "components/companions/companions.less";
 @import "components/filtered-companions/filtered-companions.less";
