--- a/source/blocks/date-picker/date-picker.less
+++ b/source/blocks/date-picker/date-picker.less
@@ -6,6 +6,7 @@
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: stretch;
+  width: 100%;
 
   @media @from-tablet {
     min-height: 85px;
