--- a/source/less/style.less
+++ b/source/less/style.less
@@ -44,6 +44,7 @@
 @import "components/my-profile/my-profile.less";
 @import "components/new-schedule/new-schedule.less";
 @import "components/step/step.less";
+@import "components/country-select/country-select.less";
 @import "components/verbal-schedule/verbal-schedule.less";
 @import "components/verbal-step/verbal-step.less";
 //
