--- a/source/less/components/new-schedule/new-schedule.less
+++ b/source/less/components/new-schedule/new-schedule.less
@@ -20,6 +20,7 @@
   align-items: center;
   color: @dark-slate-blue;
   opacity: 0.3;
+  border: 1px solid @cloudy-blue;
 
   @media @from-tablet {
     width: 70px;
@@ -51,6 +52,18 @@
     height: 20px;
     margin-left: -11px;
   }
+}
+
+.new-schedule__remove {
+  border-right: 0;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+.new-schedule__add {
+  border-left: 0;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 .new-schedule__companions-label,
@@ -90,8 +103,9 @@
 .new-schedule__duration {
   width: calc(100% - 86px);
   height: 43px;
-  border-radius: 4px;
-  border: 1px solid @cloudy-blue;
+  //border-radius: 4px;
+  border-top: 1px solid @cloudy-blue;
+  border-bottom: 1px solid @cloudy-blue;
   padding: 20px;
   box-sizing: border-box;
   font-size: 20px;
