--- a/source/less/style.less
+++ b/source/less/style.less
@@ -45,6 +45,7 @@
 @import "components/new-schedule/new-schedule.less";
 @import "components/step/step.less";
 @import "components/country-select/country-select.less";
+@import "components/country-popup/country-popup.less";
 @import "components/verbal-schedule/verbal-schedule.less";
 @import "components/verbal-step/verbal-step.less";
 //
