--- a/source/less/components/country-popup/country-popup.less
+++ b/source/less/components/country-popup/country-popup.less
@@ -4,19 +4,37 @@
   z-index: 1;
   width: 100%;
   top: 42px;
+  box-shadow: 0 20px 50px 0 rgba(29, 46, 91, 0.1);
+
+  @media @only-mobile {
+    border: 1px solid @cloudy-blue;
+  }
 
   @media @from-tablet {
     display: flex;
     flex-flow: row nowrap;
-    padding-top: 34px;
     padding-left: 27px;
     top: 70px;
+    min-height: 476px;
+  }
+
+  @media @from-desktop {
+    width: 730px;
   }
 }
 
 .country-popup__alphabet {
   display: flex;
   flex-flow: row wrap;
+  width: 324px;
+
+  @media @from-tablet {
+    padding-top: 34px;
+  }
+
+  @media @from-desktop {
+    width: 489px;
+  }
 }
 
 .country-popup__letter {
@@ -72,5 +90,17 @@
     margin-right: 15px;
     margin-bottom: 15px;
     border-radius: 4px;
+  }
+}
+
+.country-popup__list {
+  margin: 0;
+  padding-left: 20px;
+  padding-top: 15px;
+
+  @media @from-tablet {
+    padding-left: 25px;
+    padding-top: 35px;
+    border-left: 1px solid rgba(0, 0, 0, 0.5);
   }
 }
