--- a/source/less/components/country-popup/country-popup.less
+++ b/source/less/components/country-popup/country-popup.less
@@ -5,17 +5,20 @@
   width: 100%;
   top: 42px;
   box-shadow: 0 20px 50px 0 rgba(29, 46, 91, 0.1);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 
   @media @only-mobile {
     border: 1px solid @cloudy-blue;
+    padding-bottom: 15px;
   }
 
   @media @from-tablet {
-    display: flex;
     flex-flow: row nowrap;
     padding-left: 27px;
     top: 70px;
     min-height: 476px;
+    padding-bottom: 35px;
   }
 
   @media @from-desktop {
@@ -26,7 +29,8 @@
 .country-popup__alphabet {
   display: flex;
   flex-flow: row wrap;
-  width: 324px;
+  width: 100%;
+  align-content: flex-start;
 
   @media @from-tablet {
     padding-top: 34px;
@@ -53,14 +57,18 @@
   color: @dark-slate-blue;
 
   @media @only-mobile {
-    &:nth-child(n + 6) {
-      margin-top: -1px;
-      height: 43px;
+    margin-top: -1px;
+    height: 43px;
+    margin-left: -1px;
+    width: calc(20% + 1px);
+
+    &:nth-child(5n + 1) {
+      width: calc(20% + 2px);
     }
 
-    &:not(:nth-child(5n + 1)) {
-      margin-left: -1px;
-      width: calc(20% + 1px);
+    &:nth-child(5n + 5) {
+      width: 20%;
+      border-right: 0;
     }
   }
 
@@ -97,10 +105,31 @@
   margin: 0;
   padding-left: 20px;
   padding-top: 15px;
+  list-style: none;
 
   @media @from-tablet {
     padding-left: 25px;
     padding-top: 35px;
     border-left: 1px solid rgba(0, 0, 0, 0.5);
+  }
+}
+
+.country-popup__country-link {
+  font-size: 16px;
+  line-height: 1.38;
+  color: @greyish-brown;
+  text-decoration: none;
+
+  @media @from-tablet {
+    font-size: 20px;
+    line-height: 1.5;
+  }
+
+  &:hover {
+    color: @dark-slate-blue;
+  }
+
+  &:active {
+    color: @dark-slate-blue-3;
   }
 }
